finish this practice

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <main id="main">
     <div class="container">
-      <div class="movie">
+      <!-- <div class="movie">
         <img src="https://m.media-amazon.com/images/M/MV5BZWMyYzFjYTYtNTRjYi00OGExLWE2YzgtOGRmYjAxZTU3NzBiXkEyXkFqcGdeQXVyMzQ0MzA0NTM@._V1_.jpg" alt="picture">
   
         <div class="movieInfo">
@@ -62,7 +62,7 @@
         <div class="overview">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam dolorum, impedit eligendi dolore dignissimos, rem animi nihil omnis ea at repellat ducimus placeat. Quisquam itaque minus, necessitatibus earum fugit possimus!
         </div>
-      </div>
+      </div> -->
     </div>
   </main>
 
