--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
   <script src="./js/script.js"></script>
   <script src="./js/motion.js"></script>
+
+  <!-- created by Toshtemirov Akobir -->
   
 </body>
 </html>
