--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
       </div>
   </header>
 
+  <!-- Slider -->
+
+
+  <!-- Genres -->
+
+  <div id="genreMain">
+    <div class="container">
+      <div id="tags">
+        <div class="tag">Action</div>
+        <div class="tag">Adventure</div>
+        <div class="tag">Drama</div>
+        <div class="tag">Comedy</div>
+      </div>
+    </div>
+  </div>
+
   <main id="main">
     <div class="container">
 
@@ -36,6 +52,8 @@
   <script src="./js/motion.js"></script>
 
   <!-- created by Toshtemirov Akobir -->
+
+  <!-- Trailers -->
   
 </body>
 </html>
