--- a/index.html
+++ b/index.html
@@ -33,12 +33,7 @@
 
   <div id="genreMain">
     <div class="container">
-      <div id="tags">
-        <div class="tag">Action</div>
-        <div class="tag">Adventure</div>
-        <div class="tag">Drama</div>
-        <div class="tag">Comedy</div>
-      </div>
+      <div id="tags"></div>
     </div>
   </div>
 
