add pagination all

--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
     </div>
   </main>
 
+  <div class="paginationMain">
+    <div class="container">
+      <div class="pagination">
+        <div class="page" id="prev">Previous page</div>
+        <div class="current" id="current">1</div>
+        <div class="page" id="next">Next page</div>
+      </div>
+    </div>
+  </div>
+
   <script src="./js/script.js"></script>
   <script src="./js/motion.js"></script>
 
