add humburger menu

--- a/index.html
+++ b/index.html
@@ -23,17 +23,28 @@
     <form id="form" action="">
       <input type="text" placeholder="Search..." id="search" class="search">
     </form>
+
+    <div class="humburger">
+      <button class="menuBtn">
+        <img src="./icon/menu.png" alt="menu">
+      </button>
+    </div>
+
       </div>
   </header>
 
+
+  <div class="mainElem">
+    
   <!-- Slider -->
 
 
   <!-- Genres -->
 
-  <div id="genreMain">
+  <div id="genreMain genreResNone">
     <div class="container">
-      <div id="tags"></div>
+      <div id="tags" class="resTag"></div>
+
     </div>
   </div>
 
@@ -53,12 +64,17 @@
     </div>
   </div>
 
+
+  <footer>
+
+  </footer>
+
+  </div>
+
   <script src="./js/script.js"></script>
   <script src="./js/motion.js"></script>
 
   <!-- created by Toshtemirov Akobir -->
-
-  <!-- Trailers -->
   
 </body>
 </html>
