add new style 1

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
   <div class="paginationMain">
     <div class="container">
       <div class="pagination">
-        <div class="page" id="prev">Previous page</div>
-        <div class="current" id="current">1</div>
-        <div class="page" id="next">Next page</div>
+        <button class="page" id="prev">Previous page</button>
+        <button class="current" id="current">1</button>
+        <button class="page" id="next">Next page</button>
       </div>
     </div>
   </div>
