add new style 12

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
   <div id="genreMain genreResNone">
     <div class="container">
-      <div id="tags" class="resTag"></div>
+      <div id="tags" class="resTag">
+        
+      </div>
 
     </div>
   </div>
