add new style 123

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
     <div class="humburger">
       <button class="menuBtn">
-        <img src="./icon/menu.png" alt="menu">
+        <img class="menuImg" src="./icon/menu.png" alt="menu">
+        <img class="menuImg cancel" src="./icon/cancel.png" alt="cancel">
       </button>
     </div>
 
