--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 
   <!-- Genres -->
 
+  <div id="forScroll">
+    
+  </div>
+
   <div id="genreMain genreResNone">
     <div class="container">
       <div id="tags" class="resTag">
